Prevent right clouds from overlapping onto left side of page

--- a/src/main/content/_assets/css/blog.scss
+++ b/src/main/content/_assets/css/blog.scss
@@ -27,12 +27,14 @@
 
 #right_cloud_back {
     position: fixed;
+    width: 50%;
     bottom: 0;
     right: 0;
 }
 
 #right_cloud_front {
     position: fixed;
+    width: 50%;
     bottom: 0;
     right: 0;
 }
